[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/player/PlayerRobot.gd" type="Script" id=1]
[ext_resource path="res://scripts/player/state_machine/RobotAir.gd" type="Script" id=2]
[ext_resource path="res://scripts/player/state_machine/RobotRun.gd" type="Script" id=3]
[ext_resource path="res://scripts/player/state_machine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://scripts/player/state_machine/RobotIdle.gd" type="Script" id=5]
[ext_resource path="res://assets/animations/Robot.tres" type="SpriteFrames" id=6]
[ext_resource path="res://assets/animations/CreatureRiding.tres" type="SpriteFrames" id=7]
[ext_resource path="res://nodes/Interactable.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/images/characters/color-robot-inactive.png" type="Texture" id=9]
[ext_resource path="res://assets/images/characters/color-robot-active.png" type="Texture" id=10]
[ext_resource path="res://assets/animations/Drill.tres" type="SpriteFrames" id=11]
[ext_resource path="res://scripts/player/Drill.gd" type="Script" id=12]
[ext_resource path="res://nodes/player/EmoteBubble.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.5, 10 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 13.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 13.5 )

[node name="PlayerRobot" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="BatteryIndicator" type="TextureProgress" parent="."]
margin_left = -13.5
margin_top = -19.0
margin_right = -5.5
margin_bottom = -9.0
rect_pivot_offset = Vector2( 13.5, 0 )
mouse_filter = 2
step = 20.0
value = 100.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
fill_mode = 3
nine_patch_stretch = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.5, -16 )
frames = ExtResource( 6 )
animation = "idle"

[node name="CreatureBackpack" type="AnimatedSprite" parent="."]
position = Vector2( -2.5, -16 )
frames = ExtResource( 7 )
animation = "idle"

[node name="DrillSprite" type="AnimatedSprite" parent="."]
position = Vector2( -3.5, -15 )
frames = ExtResource( 11 )
animation = "active"

[node name="Drill" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 9
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drill"]
position = Vector2( 9, -14 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13.5 )
shape = SubResource( 1 )

[node name="LauchPoint" type="Position2D" parent="."]
position = Vector2( -12, -20 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Interactable" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2( 0, -13.5 )
shape = SubResource( 2 )

[node name="EmoteBubble" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 0, -24 )

[connection signal="animation_finished" from="AnimatedSprite" to="StateMachine/Idle" method="anim_finish"]
[connection signal="animation_finished" from="AnimatedSprite" to="StateMachine/Run" method="anim_finish"]
[connection signal="animation_finished" from="DrillSprite" to="." method="drill_progress"]
[connection signal="on_interact" from="Interactable" to="." method="interact"]
